@@ -249,6 +249,7 @@ std::string Config::_defaults =
   "\n"
   "#default.project=foo                           # Default project for 'add' command\n"
   "#default.due=eom                               # Default due date for 'add' command\n"
+  "#default.scheduled=eom                         # Default scheduled date for 'add' command\n"
   "default.command=next                           # When no arguments are specified\n"
   "\n"
   "_forcecolor=0                                  # Forces color to be on, even for non TTY output\n"
