@@ -39,6 +39,7 @@ class Task
 public:
   static std::string defaultProject;
   static std::string defaultDue;
+  static std::string defaultScheduled;
   static bool searchCaseSensitive;
   static bool regex;
   static std::map <std::string, std::string> attributes;  // name -> type
